<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActv">

    <Button
        android:id="@+id/btn_insurance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#49083E"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btn_insurance"
        app:layout_constraintBottom_toTopOf="@+id/btn_mediai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_history" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#49083E"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btn_history"
        app:layout_constraintBottom_toTopOf="@+id/btn_insurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ratings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#49083E"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btn_ratings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact" />

    <Button
        android:id="@+id/btn_mediai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#49083E"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btn_mediai"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_insurance" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#49083E"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btn_contactDoctor"
        app:layout_constraintBottom_toTopOf="@+id/btn_ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mediai" />

</androidx.constraintlayout.widget.ConstraintLayout>